--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,8 @@ footer {
   color: #fff;
   font-weight: bold;
   letter-spacing: 0.15em;
-  
+}
+
 /* search */
 .search {
   margin-bottom: 20px;
@@ -56,25 +57,28 @@ footer {
 .item .panel-body {
   height: 120px;
 }
+
 .item .panel-heading {
   height: 250px;
 }
+
 .item .panel-heading img {
   height: 100%;
   max-width: 100%;
 }
 
-.item .buttons form {
-  display:inline-block;
-  margin: 0 5px;
-}
-
-.item-title {
+p.item-title {
   /* 文の行数を2行に保ち、最後に ... を追加するスタイル */
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
+}
+
+/* 追加分 */
+.item .buttons form {
+  display: inline-block;
+  margin: 0 5px;
 }
 
 /* users */
