--- a/app/views/items/_items.html.erb
+++ b/app/views/items/_items.html.erb
@@ -1,11 +1,11 @@
-<% if items %>
+<% if items.present? %>
   <div class="row">
     <% items.each do |item| %>
       <div class="item">
         <div class="col-md-3 col-sm-4 col-xs-12">
           <div class="panel panel-default">
             <div class="panel-heading text-center">
-              <img src="<$= item.image_url %>" alt="">
+              <img src="<%= item.image_url %>" alt="" >
             </div>
             <div class="panel-body">
               <% if item.persisted? %>
@@ -14,8 +14,8 @@
                 <p class="item-tile"><%= link_to item.name %></p>
               <% end %>
               <div class="buttons text-center">
-                <% if logged_in %>
-                  <%= render 'ownership_path/want_button', item: item %>
+                <% if logged_in? %>
+                  <%= render 'ownerships/want_button', item: item %>
                 <% end %>
               </div>
             </div>
