--- a/app/views/ownerships/_want_button.html.erb
+++ b/app/views/ownerships/_want_button.html.erb
@@ -5,7 +5,7 @@
     <%= submit_tag 'Want', class: 'btn btn-success' %>
   <% end %>
 <% else %>
-  <%= form_tag(ownership_path) do %>
+  <%= form_tag(ownerships_path) do %>
     <%= hidden_field_tag :item_code, item.code %>
     <%= hidden_field_tag :type, 'Want' %>
     <%= submit_tag 'Want it', class: 'btn btn-primary' %>
