--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,18 +10,18 @@
           </div>
           
           <div class="form-group">
-            <%= f.label :email 'メールアドレス' %>
-            <%= f.email_field :email, class= 'form-control' %>
+            <%= f.label :email, 'メールアドレス' %>
+            <%= f.email_field :email, class: 'form-control' %>
           </div>
           
           <div class="form-group">
             <%= f.label :password, 'パスワード' %>
-            <%= f.text_field :password, class: 'form-control' %>
+            <%= f.password_field :password, class: 'form-control' %>
           </div>
           
           <div class="form-group">
-            <%= f.label :password_confirmation 'パスワード（確認）' %>
-            <%= f.email_field :password_confirmation, class= 'form-control' %>
+            <%= f.label :password_confirmation, 'パスワード（確認）' %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
           </div>
           
           <div class="text-right">
